--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "joi": "^17.9.1",
-    "jsonwebtoken": "^9.0.0", 
+    "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.43",
     "mongoose": "^7.0.3",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.2",
-    "socket.io": "^4.6.1",
+    "redis": "^4.6.7",
+    "socket.io": "^4.6.2",
+    "socket.io-client": "^4.6.2",
     "yup": "^1.1.0"
   },
   "name": "back-end",
