--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ MAIL_USERNAME = blogerbry@gmail.com
 MAIL_PASSWORD = vdviaurjiergdieo
 MAIL_FROM_ADDRESS = blogerbry@gmail.com
 SECRET_CODE = hocclnh
+REFRESH_SECRET = hocclnhok
