--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.37.1",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
@@ -11,6 +12,7 @@
     "moment-timezone": "^0.5.43",
     "mongoose": "^7.0.3",
     "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.9.2",
     "redis": "^4.6.7",
     "socket.io": "^4.6.2",
