--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "firebase": "^9.22.2",
     "joi": "^17.9.1",
     "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
@@ -22,6 +23,7 @@
   "name": "back-end",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "vite"
   },
