--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.9.2",
+    "nodemon": "^3.0.1",
     "redis": "^4.6.7",
     "socket.io": "^4.6.2",
     "socket.io-client": "^4.6.2",
